# FlyRust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  macapp_build.sh  macapp_create.sh
Contents/Resources/assets/i18n/: ui.json  ui_zh-CN.json  ui_zh-TW.json
crates/engin/: Cargo.toml  README.md
crates/engin/src/: config.rs  fly_model.rs  fly_view.rs  fly_viewmodel.rs  lib.rs
crates/engin/tests/: integration_test.rs
crates/flyrust/: Cargo.toml  README.md
crates/flyrust/src/: main.rs
crates/util/: Cargo.toml  README.md
crates/util/src/: assets.rs  customfonts.rs  lib.rs  sqlite.rs  utilities.rs
docs/: architecture.md  docing-style.md
docs/adr/: 0001-flyrust-mvvm.md
