[package]
name = "engin"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", features = ["default","__screenshot"]}
egui_extras = { version = "0.33.3", features = [
        "default",
        "all_loaders",
        "image"]}
env_logger = { version = "0.11.8", features = [
        "auto-color", 
        "humantime"]}
chrono = "0.4.42"
rand = "0.9.2"
util = { path = "../util" }
