[package]
name = "util"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", features = ["default","__screenshot"]}
egui_extras = { version = "0.33.3", features = [
        "default",
        "all_loaders",
        "image"]}
image = { version = "0.25.9", features = ["png", "jpeg"] }
env_logger = { version = "0.11.8", features = [
        "auto-color", 
        "humantime"]}
font-kit = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7.4"
